Adding exercise 3 solutions

--- a/lab/01_zasady_wstep.ipynb
+++ b/lab/01_zasady_wstep.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Zasady zaliczenia ćwiczeń\n",
     "\n",
@@ -58,13 +59,11 @@
     "\n",
     "#### Zwolnienie z egzaminu\n",
     "W każdej grupie spośród studentów wybrane zostaną maksymalnie cztery osoby, które wykonały najlepsze projekty semestralne i obroniły je w formie prezentacji dla całej grupy najpóźniej na ostatnich ćwiczeniach. Osoby te będą zwolnione z egzaminu i automatycznie otrzymają ocenę 5.0 z całego przedmiotu."
-   ],
-   "metadata": {
-    "id": "ZKhfGnYiz8HY"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Środowisko pracy\n",
     "\n",
@@ -102,28 +101,24 @@
     "7. Sprawdzić w przeglądarce czy wszystko działa\n",
     "\n",
     "### Test środowiska"
-   ],
-   "metadata": {
-    "id": "YGyVDuQZz8Hd"
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import matplotlib\n",
     "import numpy as np\n",
     "import scipy\n",
     "import sklearn\n",
     "#import torch  # uncomment if necessary"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "SM70dbEoz8He"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Colaboratory (opcjonalnie)\n",
     "W przyszłości do notebooków mogą być potrzebne większe zasoby obliczeniowe. W tym celu będziemy korzystać z narzędzia Google Colaboratory, które udostępnia za darmo dostęp do GPU. Opcjonalnie można teraz przetestować jego działanie:\n",
@@ -133,13 +128,11 @@
     "2. Otworzyć ten plik i z dostępnych aplikacji wybrać `Colaboratory`\n",
     "\n",
     "3. Sprawdzić powyższą komórką czy wszystko działa."
-   ],
-   "metadata": {
-    "id": "r_1bC18Vz8Hf"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Wstęp do pakietów naukowych: NumPy\n",
     "\n",
@@ -149,40 +142,34 @@
     "Rada ogólna: nie bać się googlania i czytania dokumentacji.\n",
     "\n",
     "**Kolejne zajęcia będą zakładać znajomość podstaw korzystania z numpy. Dla osób, które nie potrafią samodzielnie wykonać poniższych ćwiczeń, przetworzenie materiału z powyższych poradników jest obowiązkowe.**"
-   ],
-   "metadata": {
-    "id": "5SjoWUKwz8Hf"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Zadanie 1.\n",
     "Używając funkcji [`np.random.normal`](https://docs.scipy.org/doc/numpy-1.15.0/reference/generated/numpy.random.normal.html) wylosować dwie macierze **różnych** rozmiarów, i następnie przenożyć je przez siebie macierzowo tak aby otrzymać macierz rozmiaru `9x6`."
-   ],
-   "metadata": {
-    "id": "zh7AZk8nz8Hg"
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "A = np.random.normal(size=(9,5))\n",
-    "B = np.random.normal(size=(5,6))\n",
+    "A = np.random.normal(size=???)\n",
+    "B = np.random.normal(size=???)\n",
     "\n",
-    "C = np.matmul(A, B)\n",
+    "C = ???\n",
     "\n",
     "assert A.shape != B.shape\n",
     "assert C.shape == (9,6)"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "Ee409T3Iz8Hg"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Zadanie 2.\n",
     "\n",
@@ -191,51 +178,37 @@
     "odpowiednio dla każdego $x$.\n",
     "\n",
     "Hint: [`np.e`](https://docs.scipy.org/doc/numpy/reference/constants.html#numpy.e)"
-   ],
-   "metadata": {
-    "id": "_A0wKQpNz8Hh"
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def sigmoid(x: np.ndarray) -> np.ndarray:\n",
-    "    return 1/(1 + np.exp(-x))\n",
-    "\n",
+    "    ???\n",
+    "    \n",
     "    \n",
     "X = np.random.uniform(low=-10, high=10, size=(1000, 2000))\n",
     "\n",
     "assert sigmoid(X).max() <= 1.\n",
     "assert sigmoid(X).min() >= 0."
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "IKZAAe7iz8Hh"
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%timeit n=10\n",
     "sigmoid(X)"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "36.3 ms ± 2.34 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
-     ]
-    }
-   ],
-   "metadata": {
-    "id": "A2LIdMblz8Hi"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Zadanie 3.\n",
     "Unstandaryzować wartości w macierzy $X$ per kolumna, tzn. dla każdej wartości $x$ w kolumnie wykonać:\n",
@@ -243,32 +216,35 @@
     "$$ f(x_{ij}) = \\frac{x_{ij} - \\mu_j}{\\sigma_j} $$\n",
     "\n",
     "gdzie $\\mu_j$ to średnia wartość kolumny $j$, a $\\sigma_j$ to odchylenie standardowe kolumny $j$."
-   ],
-   "metadata": {
-    "id": "ySz02RWKz8Hi"
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "X = np.random.uniform(low=-10, high=10, size=(100, 10))\n",
     "\n",
-    "X_hat = (X - X.mean(axis=0)) / X.std(axis=0)\n",
+    "X_hat = ???\n",
+    "\n",
     "assert np.allclose(X_hat.mean(0), 0.)\n",
     "assert np.allclose(X_hat.std(0), 1.)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "metadata": {
-    "id": "8K3A5yEYz8Hi"
-   }
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "pycharm-950c5e7d",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "display_name": "PyCharm (ML2021-22)"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
