--- a/lab/03_regresja_liniowa.ipynb
+++ b/lab/03_regresja_liniowa.ipynb
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,48 +569,122 @@
     "        M = len(self.weight)\n",
     "        H = self.h(X)\n",
     "\n",
-    "        J = (1 / (2 * M)) * np.sum(np.square(H - y)) \\\n",
-    "            + (self.learning_rate / (2 * M)) *  np.sum(np.square(theta[1:]))\n",
+    "        # J = (1 / (2 * M)) * np.sum(np.square(H - y)) \\\n",
+    "        #     + (self.learning_rate / (2 * M)) *  np.sum(np.square(theta[1:]))\n",
+    "        # grad = (1 / M) * ((H - y) @ X)\n",
+    "        \n",
+    "        # reg_grad = (self.learning_rate / M) * theta[1:len(theta)]\n",
+    "        # grad[1:] = grad[1:] + reg_grad\n",
     "\n",
+    "        J = self.loss(X, y)\n",
+    "        # np.mean(np.square(X @ self.weight - y)) + self.alpha * np.sum(np.square(self.weight))\n",
+    "        print(\"((H - y) @X) == (((X @ self.weight) - y) @ X)\")\n",
+    "        print((H-y)@X)\n",
     "\n",
-    "        grad = (1 / M) * ((H - y) @ X)\n",
-    "\n",
-    "        reg_grad = (self.learning_rate / M) * theta[1:len(theta)]\n",
+    "        grad = 2 * (1 / M) * ((H - y) @ X)\n",
+    "        reg_grad = 2 * (self.alpha / M) * theta[1:]\n",
     "        grad[1:] = grad[1:] + reg_grad\n",
+    "        print(\"J\")\n",
+    "        print(J)\n",
+    "        print(\"grad\")\n",
+    "        print(grad)\n",
     "        return J, grad\n",
     "    def fit(self, X: np.ndarray, y: np.ndarray, n_steps=int(5e4)) -> None:\n",
     "        self.weight = np.random.normal(size=X.shape[1])  # Initializing the weights\n",
     "\n",
-    "        for i in range(n_steps):\n",
+    "        for i in range(5):\n",
     "            J, grad = self.cost(X, y)\n",
-    "            self.weight = self.weight - self.alpha * grad\n",
+    "            self.weight = self.weight - self.learning_rate * grad\n",
     "\n",
     "\n",
     "    def predict(self, X: np.ndarray):\n",
-    "        # print(X)\n",
-    "        # print(self.weight)\n",
     "        return X @ self.weight\n",
     "\n",
     "    def loss(self, X: np.ndarray, y: np.ndarray):\n",
-    "        return np.mean(np.square(X @ self.weight - y)) + self.alpha * np.sum(np.square(self.weight))"
+    "        return np.mean(np.square(X @ self.weight - y)) + self.alpha * np.matmul(self.weight, self.weight)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\damia\\anaconda3\\envs\\ML2021-22\\lib\\site-packages\\ipykernel_launcher.py:15: RuntimeWarning: overflow encountered in square\n",
-      "  from ipykernel import kernelapp as app\n",
-      "C:\\Users\\damia\\anaconda3\\envs\\ML2021-22\\lib\\site-packages\\ipykernel_launcher.py:16: RuntimeWarning: overflow encountered in square\n",
-      "  app.launch_new_instance()\n",
-      "C:\\Users\\damia\\anaconda3\\envs\\ML2021-22\\lib\\site-packages\\ipykernel_launcher.py:19: RuntimeWarning: overflow encountered in matmul\n",
-      "C:\\Users\\damia\\anaconda3\\envs\\ML2021-22\\lib\\site-packages\\ipykernel_launcher.py:7: RuntimeWarning: invalid value encountered in matmul\n",
-      "  import sys\n"
+      "WWWWWWWWWWWWWWWWW\n",
+      "[-1.85221074 -1.08099899  0.07856383 -1.35413559  0.62614846  0.73338755\n",
+      " -1.47097856 -1.67541955  0.58302756 -0.67746106  0.67755519  0.18552945\n",
+      " -1.15683452]\n",
+      "XXXXXXXXXXXXXXXXXXXXXX\n",
+      "[[6.3200e-03 1.8000e+01 2.3100e+00 ... 1.5300e+01 3.9690e+02 4.9800e+00]\n",
+      " [2.7310e-02 0.0000e+00 7.0700e+00 ... 1.7800e+01 3.9690e+02 9.1400e+00]\n",
+      " [2.7290e-02 0.0000e+00 7.0700e+00 ... 1.7800e+01 3.9283e+02 4.0300e+00]\n",
+      " ...\n",
+      " [6.0760e-02 0.0000e+00 1.1930e+01 ... 2.1000e+01 3.9690e+02 5.6400e+00]\n",
+      " [1.0959e-01 0.0000e+00 1.1930e+01 ... 2.1000e+01 3.9345e+02 6.4800e+00]\n",
+      " [4.7410e-02 0.0000e+00 1.1930e+01 ... 2.1000e+01 3.9690e+02 7.8800e+00]]\n",
+      "((H - y) @X) == (((X @ self.weight) - y) @ X)\n",
+      "[-1.04663351e+06 -1.58945879e+06 -2.32597225e+06 -1.19938935e+04\n",
+      " -1.04149412e+05 -1.09950039e+06 -1.34375053e+07 -5.85514944e+05\n",
+      " -2.24153826e+06 -8.39241348e+07 -3.32810666e+06 -5.96252933e+07\n",
+      " -2.55334029e+06]\n",
+      "J\n",
+      "142763.63498992828\n",
+      "grad\n",
+      "[-1.61020540e+05 -2.44532123e+05 -3.57841885e+05 -1.84521647e+03\n",
+      " -1.60229855e+04 -1.69153905e+05 -2.06730851e+06 -9.00792248e+04\n",
+      " -3.44852039e+05 -1.29114053e+07 -5.12016408e+05 -9.17312205e+06\n",
+      " -3.92821585e+05]\n",
+      "((H - y) @X) == (((X @ self.weight) - y) @ X)\n",
+      "[1.90978004e+07 4.17980794e+07 5.13029802e+07 2.88781998e+05\n",
+      " 2.40991630e+06 2.64084612e+07 3.02089040e+08 1.51172571e+07\n",
+      " 4.70628910e+07 1.87216820e+09 7.89727147e+07 1.50592318e+09\n",
+      " 5.65233315e+07]\n",
+      "J\n",
+      "73391430.02034318\n",
+      "grad\n",
+      "[2.93812315e+06 6.43047376e+06 7.89276618e+06 4.44279976e+04\n",
+      " 3.70756355e+05 4.06284019e+06 4.64752369e+07 2.32573185e+06\n",
+      " 7.24044478e+06 2.88025878e+08 1.21496484e+07 2.31680490e+08\n",
+      " 8.69589715e+06]\n",
+      "((H - y) @X) == (((X @ self.weight) - y) @ X)\n",
+      "[-4.43829418e+08 -9.87144912e+08 -1.19656152e+09 -6.77551498e+06\n",
+      " -5.63379728e+07 -6.18167043e+08 -7.06318578e+09 -3.54566113e+08\n",
+      " -1.09476918e+09 -4.36722331e+10 -1.84699166e+09 -3.52811813e+10\n",
+      " -1.32010502e+09]\n",
+      "J\n",
+      "40070284236.40585\n",
+      "grad\n",
+      "[-6.82814490e+07 -1.51868448e+08 -1.84086388e+08 -1.04238692e+06\n",
+      " -8.66738043e+06 -9.51026219e+07 -1.08664397e+09 -5.45486328e+07\n",
+      " -1.68426028e+08 -6.71880510e+09 -2.84152564e+08 -5.42787404e+09\n",
+      " -2.03093080e+08]\n",
+      "((H - y) @X) == (((X @ self.weight) - y) @ X)\n",
+      "[1.03670564e+10 2.30688444e+10 2.79581943e+10 1.58327795e+08\n",
+      " 1.31643828e+09 1.44452484e+10 1.65036870e+11 8.28616600e+09\n",
+      " 2.55781344e+10 1.02043719e+12 4.31597569e+10 8.24499586e+11\n",
+      " 3.08447475e+10]\n",
+      "J\n",
+      "21879414704585.703\n",
+      "grad\n",
+      "[1.59493176e+09 3.54905299e+09 4.30126066e+09 2.43581224e+07\n",
+      " 2.02528967e+08 2.22234590e+09 2.53902877e+10 1.27479477e+09\n",
+      " 3.93509760e+09 1.56990338e+11 6.63996260e+09 1.26846090e+11\n",
+      " 4.74534576e+09]\n",
+      "((H - y) @X) == (((X @ self.weight) - y) @ X)\n",
+      "[-2.42247738e+11 -5.39062567e+11 -6.53303173e+11 -3.69969870e+09\n",
+      " -3.07614988e+10 -3.37545806e+11 -3.85645411e+12 -1.93625427e+11\n",
+      " -5.97685897e+11 -2.38447078e+13 -1.00852384e+12 -1.92663089e+13\n",
+      " -7.20755146e+11]\n",
+      "J\n",
+      "1.1946729393453176e+16\n",
+      "grad\n",
+      "[-3.72688827e+10 -8.29327025e+10 -1.00508180e+11 -5.69184416e+08\n",
+      " -4.73253827e+09 -5.19301239e+10 -5.93300633e+11 -2.97885272e+10\n",
+      " -9.19516765e+10 -3.66841658e+12 -1.55157513e+11 -2.96404752e+12\n",
+      " -1.10885407e+11]\n"
      ]
     },
     {
@@ -620,7 +694,7 @@
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mAssertionError\u001B[0m                            Traceback (most recent call last)",
-      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_20308/998312951.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mchecker\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mcheck_02_regularized_linear_regression\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mRegularizedLinearRegression\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      2\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_13112/998312951.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mchecker\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mcheck_02_regularized_linear_regression\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mRegularizedLinearRegression\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      2\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
       "\u001B[1;32m~\\ML2021-22\\lab\\checker.py\u001B[0m in \u001B[0;36mcheck_02_regularized_linear_regression\u001B[1;34m(lr_cls)\u001B[0m\n\u001B[0;32m    138\u001B[0m     \u001B[1;31m# np.savez_compressed(\".checker/05/rlr_boston.out.npz\", data=returned)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    139\u001B[0m     \u001B[0mexpected\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mload\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m\".checker/05/rlr_boston.out.npz\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;34m\"data\"\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 140\u001B[1;33m     \u001B[1;32massert\u001B[0m \u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mallclose\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mexpected\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mreturned\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mrtol\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;36m1e-03\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0matol\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;36m1e-06\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m\"Wrong prediction returned!\"\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    141\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    142\u001B[0m     \u001B[0mloss\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mlr\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mloss\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0minput_dataset\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdata\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0minput_dataset\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mtarget\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
       "\u001B[1;31mAssertionError\u001B[0m: Wrong prediction returned!"
      ]
