--- a/lab/06_neural_networks.ipynb
+++ b/lab/06_neural_networks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,36 +91,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
     "from torchvision.datasets import MNIST\n",
-    "from torchvision.transforms import ???\n",
+    "from torchvision.transforms import ToTensor, Normalize, Compose, Lambda\n",
+    "from torch.utils.data import DataLoader\n",
     "\n",
     "def calculate_mean_and_std() -> Tuple[float, float]:\n",
-    "    ???\n",
+    "    train_data = MNIST(\n",
+    "        root='.',\n",
+    "        download=True,\n",
+    "        train=True,\n",
+    "        transform=Compose([ToTensor()])\n",
+    "    )\n",
+    "    train_loader = DataLoader(train_data, batch_size=len(train_data))\n",
+    "    x, _ = next(iter(train_loader))\n",
+    "\n",
+    "    mean = x.mean()\n",
+    "    std = x.std()\n",
+    "\n",
     "    return mean, std\n",
     "mean, std = calculate_mean_and_std()\n",
     "\n",
     "train_data = MNIST(\n",
     "    root='.',\n",
     "    download=True,\n",
-    "    train=True, \n",
-    "    ???\n",
+    "    train=True,\n",
+    "    transform=Compose([ToTensor(),\n",
+    "                       Normalize([mean, ], [std, ]),\n",
+    "                       Lambda(lambda x: torch.flatten(x))\n",
+    "                       ])\n",
     ")\n",
     "\n",
     "test_data = MNIST(\n",
     "    root='.', \n",
     "    download=True, \n",
-    "    train=False, \n",
-    "    ???\n",
+    "    train=False,\n",
+    "    transform=Compose([ToTensor(),\n",
+    "                       Normalize([mean, ], [std, ]),\n",
+    "                       Lambda(lambda x: torch.flatten(x))\n",
+    "                       ])\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,11 +247,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tutaj należy opisać wyniki eksperymentów na zbiorze Gaussian."
+    "# Tutaj należy opisać wyniki eksperymentów na zbiorze Gaussian.\n",
+    "# Tak, możemy rozwiązań ten problem przy użyciu regresji liniowej.\n",
+    "# Problem jest łatwiejszy gdyż w podanej przestrzeni 2D dane mogą  zostać oddzielone od siebie przy użyciu prostej.\n",
+    "# Oba modele sieci są wstanie poradzić sobie z tym zadaniem, jednak nie ma potrzeby w przypadku tego zadania używania większej ilości warstw i/oraz neuronów."
    ]
   },
   {
@@ -248,11 +269,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tutaj należy opisać wyniki eksperymentów na zbiorze Circle."
+    "# Tutaj należy opisać wyniki eksperymentów na zbiorze Circle.\n",
+    "# Potrzebne są featury X1, X2, X1**2, X2**2.\n",
+    "# Sieć składająca się z dwóch warstw 3-2\n",
+    "# Aktywacje liniowe nie działają, ponieważ dane nie są liniowo separowalne."
    ]
   },
   {
@@ -266,11 +290,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tutaj należy opisać wyniki eksperymentów na zbiorze Spiral."
+    "# Tutaj należy opisać wyniki eksperymentów na zbiorze Spiral.\n",
+    "# Wykorzystałem architekturę 5-5-5-3, funkcję aktywacji ReLU, bez użycia regularyzacji.\n",
+    "# Rozwiązania, które dobrze generalizują lepiej sprawdzają się na danych testowych. Rozwiązania, które overfitują gorzej radzą sobie z nowymi danymi."
    ]
   },
   {
@@ -296,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,20 +336,21 @@
     "        \"\"\"\n",
     "        Initialize network's weights \n",
     "        \"\"\"\n",
+    "\n",
+    "        self.weight_1: torch.Tensor = torch.randn(input_dim, hidden_dim, requires_grad=True)\n",
+    "        self.bias_1: torch.Tensor = torch.zeros(hidden_dim)\n",
     "        \n",
-    "        self.weight_1: torch.Tensor = ???\n",
-    "        self.bias_1: torch.Tensor = ???\n",
-    "        \n",
-    "        self.weight_2: torch.Tensor = ???\n",
-    "        self.bias_2: torch.Tensor = ???\n",
+    "        self.weight_2: torch.Tensor = torch.randn(hidden_dim, output_dim, requires_grad=True)\n",
+    "        self.bias_2: torch.Tensor = torch.zeros(output_dim)\n",
     "        \n",
     "    def __call__(self, x: torch.Tensor) -> torch.Tensor:\n",
     "        \"\"\"\n",
     "        Forward pass through the network\n",
     "        \"\"\"\n",
+    "        l1 = torch.tanh(x @ self.weight_1 + self.bias_1)\n",
+    "        out = l1 @ self.weight_2 + self.bias_2\n",
     "\n",
-    "        ???\n",
-    "        \n",
+    "        return out\n",
     "    def parameters(self) -> List[torch.Tensor]:\n",
     "        \"\"\"\n",
     "        Returns all trainable parameters \n",
@@ -333,11 +360,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 137,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0 iter 900/937 loss: 0.6227748394012451\r\n",
+      "Test accuracy: 0.7781999707221985\n",
+      "Epoch 1 iter 900/937 loss: 0.4184933304786682\r\n",
+      "Test accuracy: 0.8216999769210815\n",
+      "Epoch 2 iter 900/937 loss: 0.3430801331996918\r\n",
+      "Test accuracy: 0.8395000100135803\n"
+     ]
+    }
+   ],
    "source": [
     "from torch import nn\n",
     "from torch.optim import SGD\n",
@@ -353,12 +393,15 @@
     "test_loader = torch.utils.data.DataLoader(test_data, batch_size=batch_size)\n",
     "\n",
     "# initialize the model\n",
-    "model: CustomNetwork = ???\n",
+    "input_dim =  784\n",
+    "hidden_dim = 64\n",
+    "output_dim = 10\n",
+    "model: CustomNetwork = CustomNetwork(input_dim, hidden_dim, output_dim)\n",
     "\n",
     "# initialize the optimizer using the hyperparams below\n",
     "lr: float = 0.01\n",
     "momentum: float = 0.9\n",
-    "optimizer: torch.optim.Optimizer = SGD(???)\n",
+    "optimizer: torch.optim.Optimizer = SGD(model.parameters(), lr=lr, momentum=momentum)\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "\n",
@@ -368,14 +411,14 @@
     "        # reset the gradients from previouis iteration\n",
     "        optimizer.zero_grad()\n",
     "        # pass through the network\n",
-    "        output: torch.Tensor = ???\n",
+    "        output: torch.Tensor = model(x)\n",
     "        # calculate loss\n",
-    "        loss: torch.Tensor = criterion(???)\n",
+    "        loss: torch.Tensor = criterion(output, y)\n",
     "        # backward pass thorught the network\n",
     "        loss.backward()\n",
     "        # apply the gradients\n",
     "        optimizer.step()\n",
-    "        \n",
+    "\n",
     "        # log the loss value\n",
     "        if (i + 1) % 100 == 0:\n",
     "            print(f\"Epoch {e} iter {i+1}/{len(train_data) // batch_size} loss: {loss.item()}\", end=\"\\r\")\n",
@@ -386,9 +429,10 @@
     "        correct: int = 0 \n",
     "        for i, (x, y) in enumerate(test_loader):\n",
     "            # pass through the network\n",
-    "            output: torch.Tensor = ???\n",
+    "            output: torch.Tensor = model(x)\n",
     "            # update the number of correctly predicted examples\n",
-    "            correct += ???\n",
+    "            predicted = torch.argmax(output, dim=1)\n",
+    "            correct += (predicted == y).sum()\n",
     "\n",
     "        print(f\"\\nTest accuracy: {correct / len(test_data)}\")\n",
     "\n",
@@ -399,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": []
