Updating solutions to exercise 8.

--- a/lab/08_regularyzacja.ipynb
+++ b/lab/08_regularyzacja.ipynb
@@ -214,8 +214,7 @@
     "**Zakładamy, że chcemy wykonywać skalowanie w treningu.**\n",
     "1. Dzięki warstwie Dropout sieć nie będzie się overfitowała\n",
     "2. Poprzez użycie warstwy Dropout sieć z każdą epoką uczy się nowych cech\n",
-    "3. Techniki ensemble polegają na tworzeniu wielu modeli i łączeniu ich w jeden, używanie warstwy Dropout wyłącza różne neurony tworząc \"inny model\"\n",
-    "4."
+    "3. Techniki ensemble polegają na tworzeniu wielu modeli i łączeniu ich w jeden, używanie warstwy Dropout wyłącza różne neurony tworząc \"inny model\""
    ]
   },
   {
